--- a/mainapp/templates/mainapp/index.html
+++ b/mainapp/templates/mainapp/index.html
@@ -129,7 +129,7 @@
           >
             <div class="bg-white py-2 collapse-inner rounded">
               <h6 class="collapse-header">경제관련 데이터</h6>
-              <a class="collapse-item" href="buttons.html">소비자물가지수</a>
+              <a class="collapse-item" href="/main/price/">소비자물가지수</a>
               <a class="collapse-item" href="cards.html">코스피</a>
             </div>
           </div>
