23-05-03 박성준 cultureapp medical api html 추가

--- a/peopleapp/templates/peopleapp/people_pop.html
+++ b/peopleapp/templates/peopleapp/people_pop.html
@@ -178,9 +178,16 @@
           >
             <div class="bg-white py-2 collapse-inner rounded">
               <h6 class="collapse-header">산업 및 노동관련 데이터</h6>
-              <a class="collapse-item" href="buttons.html">데이터 센터 현황</a>
-              <a class="collapse-item" href="cards.html">고용인구</a>
-              <a class="collapse-item" href="cards.html">고용률</a>
+              <a
+                class="collapse-item"
+                href="http://127.0.0.1:8000/industry/factory/"
+                >공장면적</a
+              >
+              <a
+                class="collapse-item"
+                href="http://127.0.0.1:8000/industry/employment/"
+                >고용률</a
+              >
             </div>
           </div>
         </li>
@@ -231,7 +238,9 @@
           >
             <div class="bg-white py-2 collapse-inner rounded">
               <h6 class="collapse-header">주거 데이터</h6>
-              <a class="collapse-item" href="http://127.0.0.1:8000/residence/"
+              <a
+                class="collapse-item"
+                href="http://127.0.0.1:8000/residence/residence_view/"
                 >전국주택가격 동향</a
               >
             </div>
@@ -265,11 +274,6 @@
               <a class="collapse-item" href="http://127.0.0.1:8000/reference/"
                 >기본 틀</a
               >
-              <a class="collapse-item" href="utilities-border.html">Borders</a>
-              <a class="collapse-item" href="utilities-animation.html"
-                >Animations</a
-              >
-              <a class="collapse-item" href="utilities-other.html">Other</a>
             </div>
           </div>
         </li>
@@ -376,7 +380,7 @@
                     class="card-header py-3 d-flex flex-row align-items-center justify-content-between btn-group"
                   >
                     <h6 class="m-0 font-weight-bold text-primary">
-                      전력량 {{year_data}}년 {{area_data}} 지역 그래프
+                      전력량 인구밀도 {{year_data}}년 {{area_data}} 지역 그래프
                     </h6>
                     <div class="mb-4">
                       <select
