--- a/industryapp/templates/industryapp/employment.html
+++ b/industryapp/templates/industryapp/employment.html
@@ -178,8 +178,11 @@
           >
             <div class="bg-white py-2 collapse-inner rounded">
               <h6 class="collapse-header">산업 및 노동관련 데이터</h6>
-              <a class="collapse-item" href="buttons.html">데이터 센터 현황</a>
-              <a class="collapse-item" href="cards.html">고용인구</a>
+              <a
+                class="collapse-item"
+                href="http://127.0.0.1:8000/industry/factory/"
+                >공장면적</a
+              >
               <a
                 class="collapse-item"
                 href="http://127.0.0.1:8000/industry/employment/"
@@ -235,7 +238,9 @@
           >
             <div class="bg-white py-2 collapse-inner rounded">
               <h6 class="collapse-header">주거 데이터</h6>
-              <a class="collapse-item" href="http://127.0.0.1:8000/residence/"
+              <a
+                class="collapse-item"
+                href="http://127.0.0.1:8000/residence/residence_view/"
                 >전국주택가격 동향</a
               >
             </div>
@@ -269,11 +274,6 @@
               <a class="collapse-item" href="http://127.0.0.1:8000/reference/"
                 >기본 틀</a
               >
-              <a class="collapse-item" href="utilities-border.html">Borders</a>
-              <a class="collapse-item" href="utilities-animation.html"
-                >Animations</a
-              >
-              <a class="collapse-item" href="utilities-other.html">Other</a>
             </div>
           </div>
         </li>
